# ESP32-project

./: README.md
demo_http_ota/: sdkconfig
demo_http_ota/Component/ESP32_Drive/Http_OTA/: http_ota.h
demo_http_ota/Component/ESP32_Drive/WIFI_Drive/: CMakeLists.txt  wifi_drive.c  wifi_drive.h
demo_http_ota/main/: CMakeLists.txt  main.c  main.h
kt_os_v1/esp32_drive/: esp32_drive.c  esp32_drive.h
kt_os_v1/esp32_drive/iic_drive/: iic_drive.c  iic_drive.h
kt_os_v1/esp32_drive/lcd_drive/: lcd_drive.c  lcd_drive.h
kt_os_v1/kt_os/: kt_os.c  kt_os.h  kt_os_conf.h
kt_os_v1/kt_os/src/lvgl/: lvgl_posting.c  lvgl_posting.h
kt_os_v1/kt_os/src/lvgl/lvgl/: lv_conf.h
kt_os_v1/main/: CMakeLists.txt  main.c  main.h
